--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
