--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
