--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "rhms",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "http-status": "^1.7.3",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.1",
-    "next": "^14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.17.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "swr": "^2.2.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3"
-  }
+	"name": "rhms",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"axios": "^1.6.2",
+		"bcrypt": "^5.1.1",
+		"http-status": "^1.7.3",
+		"joi": "^17.11.0",
+		"mongoose": "^8.0.1",
+		"next": "^14.0.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^4.12.0",
+		"react-router-dom": "^6.17.0",
+		"react-slick": "^0.29.0",
+		"slick-carousel": "^1.8.1",
+		"swr": "^2.2.4"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10",
+		"postcss": "^8",
+		"tailwindcss": "^3"
+	}
 }
