--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"next": "^14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
 		"react-router-dom": "^6.17.0",
 		"react-slick": "^0.29.0",
