--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
 	"dependencies": {
 		"axios": "^1.6.2",
 		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
 		"http-status": "^1.7.3",
+		"https": "^1.0.0",
 		"joi": "^17.11.0",
 		"mongoose": "^8.0.1",
 		"next": "^14.0.3",
+		"next-auth": "^4.24.5",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
+		"react-paystack": "^5.0.0",
 		"react-router-dom": "^6.17.0",
 		"react-slick": "^0.29.0",
 		"slick-carousel": "^1.8.1",
