--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-paystack": "^5.0.0",
 		"react-router-dom": "^6.17.0",
 		"react-slick": "^0.29.0",
+		"react-spinners": "^0.13.8",
 		"slick-carousel": "^1.8.1",
 		"swr": "^2.2.4"
 	},
