categories and create productt UI

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"antd": "^4.22.4",
 		"@ant-design/icons": "^5.0.1",
-		"bootstrap": "^5.2.3",
+		"antd": "^4.22.4",
 		"axios": "^1.6.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
+		"bootstrap": "^5.2.3",
+		"cloudinary": "^2.0.1",
+		"cloudinary-react": "^1.8.1",
 		"http-status": "^1.7.3",
 		"https": "^1.0.0",
 		"joi": "^17.11.0",
@@ -25,12 +27,13 @@
 		"react": "^18",
 		"react-bootstrap": "^2.7.0",
 		"react-dom": "^18",
+		"react-dropzone": "^14.2.3",
+		"react-highlight-words": "^0.18.0",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
 		"react-number-format": "^5.3.1",
 		"react-paystack": "^5.0.0",
 		"react-router-dom": "^6.17.0",
-		"react-highlight-words": "^0.18.0",
 		"react-slick": "^0.29.0",
 		"react-spinners": "^0.13.8",
 		"react-toastify": "^9.1.1",
