--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"next-auth": "^4.24.5",
 		"react": "^18",
 		"react-bootstrap": "^2.7.0",
+		"react-datepicker": "^4.24.0",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
 		"react-highlight-words": "^0.18.0",
