--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@nextui-org/dropdown": "^2.1.16",
+		"@nextui-org/react": "^2.2.9",
 		"axios": "^1.6.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
