--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@nextui-org/dropdown": "^2.1.16",
-		"@nextui-org/react": "^2.2.9",
 		"axios": "^1.6.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
@@ -21,6 +19,7 @@
 		"next": "^14.0.3",
 		"next-auth": "^4.24.5",
 		"react": "^18",
+		"react-calendly": "^4.3.0",
 		"react-dom": "^18",
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.12.0",
