--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.0.1",
+		"antd": "^4.22.4",
 		"@nextui-org/dropdown": "^2.1.16",
 		"@nextui-org/react": "^2.2.9",
 		"axios": "^1.6.2",
