--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.0.1",
+		"antd": "^4.22.4",
+		"@nextui-org/dropdown": "^2.1.16",
+		"@nextui-org/react": "^2.2.9",
 		"axios": "^1.6.2",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
@@ -23,6 +27,8 @@
 		"next": "^14.0.3",
 		"next-auth": "^4.24.5",
 		"react": "^18",
+		"react-bootstrap": "^2.7.0",
+		"react-datepicker": "^4.24.0",
 		"react-calendly": "^4.3.0",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
