--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-router-dom": "^6.17.0",
 		"react-slick": "^0.29.0",
 		"react-spinners": "^0.13.8",
+		"react-toastify": "^10.0.4",
 		"slick-carousel": "^1.8.1",
 		"swr": "^2.2.4"
 	},
